--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
         <div>
             <label for="nome">Nome:</label><br>
             <input type="text" id="nome" name="nome" required><br>
+            <label for="sobrenome">Sobrenome:</label><br>
+            <input type="text" id="sobrenome" name="sobrenome" required><br>
             <label for="idade">Idade:</label><br>
             <input type="number" name="idade" id="idade"><br>
+            <label for="email">E-mail</label><br>
+            <input type="text" id="email" name="email" required><br>
         </div>
         <button type="submit">Registrar</button>
     </form>    
