--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <input type="number" name="idade" id="idade"><br>
             <label for="email">E-mail</label><br>
             <input type="text" id="email" name="email" required><br>
+            <label for="endereco">Endereço: </label><br>
+            <input type="text" id="endereco" name="endereco" required><br>
         </div>
         <button type="submit">Registrar</button>
     </form>    
