--- a/index.html
+++ b/index.html
@@ -11,14 +11,7 @@
         <div>
             <label for="nome">Nome:</label><br>
             <input type="text" id="nome" name="nome" required><br>
-            <label for="sobrenome">Sobrenome:</label><br>
-            <input type="text" id="sobrenome" name="sobrenome" required><br>
-            <label for="idade">Idade:</label><br>
-            <input type="number" name="idade" id="idade"><br>
-            <label for="email">E-mail</label><br>
-            <input type="text" id="email" name="email" required><br>
-            <label for="endereco">Endereço: </label><br>
-            <input type="text" id="endereco" name="endereco" required><br>
+            <label for=""></label>
         </div>
         <button type="submit">Registrar</button>
     </form>    
